# civ

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  package.json
assets/scripts/: example_mod.js
channel/: register.rs
channel/engine-event/player_gold_changed/: emit.rs  mod.rs  model.rs  model.ts  subscribe.ts
channel/engine-event/turn_changed/: emit.rs  mod.rs  model.rs  model.ts  subscribe.ts
channel/front-api/add_gold/: call.ts  handler.rs  mod.rs  model.rs  model.ts
channel/front-api/create_city/: call.ts  handler.rs  mod.rs  model.rs  model.ts
channel/front-api/end_turn/: call.ts  handler.rs  mod.rs  model.rs  model.ts
channel/front-api/request_snapshot/: call.ts  handler.rs  mod.rs  model.rs  model.ts
channel/front-api/spawn_unit/: call.ts  handler.rs  mod.rs  model.rs  model.ts
channel/ui-event/input_frame/: mod.rs  model.rs  model.ts
crates/ai/: Cargo.toml  README.md
crates/assets/: Cargo.toml  README.md
crates/assets/src/: lib.rs
crates/civ-channel/: Cargo.toml
crates/civ-channel/src/: lib.rs  register.rs  wire.rs
crates/civ-channel/src/engine_event/: mod.rs
crates/civ-channel/src/front_api/: mod.rs
crates/civ-channel/src/ui_event/: mod.rs
crates/civ-channel/ts/: wire.ts
crates/civ-channel/ts/engine_event/: runtime.ts
crates/civ-channel/ts/front_api/: runtime.ts
crates/civ-channel/ts/ui_event/: runtime.ts
crates/combat/: Cargo.toml  README.md
crates/commands/: Cargo.toml  README.md
crates/commands/src/: game.rs  lib.rs  plugin.rs  ui.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: error.rs  ids.rs  lib.rs  state.rs  version.rs
crates/culture/: Cargo.toml  README.md
crates/culture/src/: lib.rs
crates/diplomacy/: Cargo.toml  README.md
crates/diplomacy/src/: lib.rs
crates/economy/: Cargo.toml  README.md
crates/economy/src/: lib.rs
crates/ecs/: Cargo.toml  README.md
crates/ecs/src/: components.rs  lib.rs  markers.rs  plugin.rs  snap.rs  sync.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: game.rs  lib.rs  plugin.rs  ui.rs
crates/fog/: Cargo.toml  README.md
crates/fog/src/: lib.rs
crates/gameplay/: Cargo.toml  README.md
crates/gameplay/src/: lib.rs
crates/government/: Cargo.toml  README.md
crates/government/src/: lib.rs
crates/great_people/: Cargo.toml  README.md
crates/great_people/src/: lib.rs
crates/hex/: Cargo.toml  README.md
crates/hex/src/: coordinate.rs  grid.rs  layout.rs  lib.rs
crates/movement/: Cargo.toml  README.md
crates/movement/src/: lib.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: lib.rs
crates/pathfinding/: Cargo.toml  README.md
crates/pathfinding/src/: grid.rs  lib.rs  plugin.rs
crates/production/: Cargo.toml  README.md
crates/production/src/: lib.rs
crates/quickjs/: Cargo.toml  README.md
crates/quickjs/src/: bindings.rs  lib.rs  plugin.rs  runtime.rs
crates/religion/: Cargo.toml  README.md
crates/religion/src/: lib.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: camera.rs  camera_controller.rs  hex_mesh.rs  lib.rs  lighting.rs  meshes.rs  plugin.rs  scene.rs  selection.rs
crates/research/: Cargo.toml  README.md
crates/research/src/: lib.rs
crates/resources/: Cargo.toml  README.md
crates/resources/src/: lib.rs  plugin.rs  registry.rs
crates/save/: Cargo.toml  README.md
crates/save/src/: format.rs  lib.rs  plugin.rs  service.rs
crates/scripting/: Cargo.toml  README.md
crates/scripting/src/: api.rs  lib.rs  plugin.rs  runtime.rs
crates/simulation/: Cargo.toml  README.md
crates/simulation/src/: lib.rs  plugin.rs  state.rs  systems.rs
crates/terrain/: Cargo.toml  README.md
crates/terrain/src/: generator.rs  lib.rs  plugin.rs
crates/trade/: Cargo.toml  README.md
crates/trade/src/: lib.rs
crates/ui_bridge/: Cargo.toml  README.md
crates/ui_bridge/src/: channel.rs  lib.rs  plugin.rs  protocol.rs  systems.rs
crates/world/: Cargo.toml  README.md
crates/world/src/: city.rs  components.rs  generation.rs  lib.rs  player.rs  tile.rs  unit.rs  world.rs
engine/: Cargo.toml  README.md
engine/src/: app.rs  lib.rs  main.rs
engine/src/plugins/: engine.rs  mod.rs  window.rs
launcher/: Cargo.toml  README.md  tauri.conf.json
launcher/capabilities/: default.json
launcher/src/: commands.rs  dev_server.rs  ipc.rs  lib.rs  main.rs  state.rs  webview_overlay.rs
launcher/src/commands/: mod.rs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  ipc.ts  main.tsx  styles.css
ui/src/app/: App.tsx
ui/src/components/: Hud.tsx
ui/src/entities/event-log/: index.ts
ui/src/entities/event-log/model/: store.ts
ui/src/entities/event-log/ui/: EventLog.tsx
ui/src/entities/gold/: index.ts
ui/src/entities/gold/model/: store.ts  subscribe.ts
ui/src/entities/gold/ui/: GoldStat.tsx
ui/src/entities/turn/: index.ts
ui/src/entities/turn/model/: store.ts  subscribe.ts
ui/src/entities/turn/ui/: TurnStat.tsx
ui/src/features/add-gold/: index.ts
ui/src/features/add-gold/api/: addGold.ts
ui/src/features/add-gold/ui/: AddGoldButton.tsx
ui/src/features/end-turn/: index.ts
ui/src/features/end-turn/api/: endTurn.ts
ui/src/features/end-turn/ui/: EndTurnButton.tsx
ui/src/input/: bridge.ts
ui/src/shared/api/: engine-events.ts  front-api.ts  index.ts  ui-events.ts
ui/src/shared/lib/: index.ts  input-bridge.ts
ui/src/shared/ui/stat/: Stat.tsx
ui/src/widgets/hud/: index.ts
ui/src/widgets/hud/model/: useEngineSync.ts
ui/src/widgets/hud/ui/: Hud.tsx
