[package]
edition.workspace = true
name = "civ-launcher"
description = "Tauri shell hosting React UI over the Bevy renderer."
readme = "README.md"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
civ-common = { workspace = true }
civ-hex = { workspace = true }
civ-commands = { workspace = true }
civ-ui-bridge = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "civ_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "civ-launcher"
path = "src/main.rs"
