[package]
edition.workspace = true
name = "civ-launcher"
description = "Unified Civ app: Bevy renderer with transparent React UI overlay."
readme = "README.md"
publish = false

[dependencies]
civ-channel = { workspace = true }
civ-ui-bridge = { workspace = true }
civ-engine = { path = "../engine" }
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = "0.30"
wry = { version = "0.55", features = ["transparent", "devtools"] }

[lib]
name = "civ_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "civ-launcher"
path = "src/main.rs"
