[package]
edition.workspace = true
name = "civ-render"
description = "Bevy rendering plugin — observes ECS, never owns simulation truth."
readme = "README.md"
publish = false

[dependencies]
civ-channel = { workspace = true }
civ-ecs = { workspace = true }
civ-hex = { workspace = true }
civ-simulation = { workspace = true }
civ-world = { workspace = true }
bevy = { workspace = true }
image = { workspace = true }
